mudanças na responsividade, alterando captação de dados e atualizando página de usuario

--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -16,39 +16,18 @@
   </head>
   <body id="inicio">
     <header>
-      <!--topo com navegação para outras pages-->
-      <a href="Quem somos.html">
+      <!--Logo-->
+      <a href="index.html">
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
-      <div id="links_acesso">
+      <!--Links de acesso para outras páginas-->
+      <div class="links_acesso">
         <a href="index.html">
           <img
             src="Imagens/homeIcon.png"
             alt="Botão de ir pro Usúario"
             title="Página inicial"
         /></a>
-        <a href="artistas.html">
-          <img
-            src="Imagens/artistaIcon.png"
-            alt="Botão de ir pro Usúario"
-            tabindex="1"
-            title="Nossos artistas"
-        /></a>
-        <a href="Quem somos.html">
-          <img
-            src="Imagens/Empresa.png"
-            alt="Botão de ir pro Usúario"
-            tabindex="1"
-            title="Quem somos"
-        /></a>
-        <div href="areaUsuário.html" id="botão_abrir_login" onClick="window.location.reload(true)">
-          <img
-            src="Imagens/userIcon.png"
-            alt="Botão de ir pro Usúario"
-            tabindex="1"
-            title="Usuário"
-          />
-        </div>
       </div>
     </header>
     <main>
@@ -76,14 +55,14 @@
         </section>
         <section id="nav_opcoes_usuario">
           <ul>
-            <li>Orçamento</li>
-            <li>2</li>
-            <li>3</li>
+            <li id="optorcamento">Orçamento</li>
+            <li id="optvirarparceiro">Virar parceiro</li>
+            <li id="optexcluirconta">Excluir conta</li>
           </ul>
         </section>
       </section>
       <!--Page 1 - orçamento-->
-      <div id="container_orçamento">
+      <div id="container_conteudo">
         <div id="header_conteudo_usuario">
           <p>Faça seu orçamento conosco!</p>
         </div>
