--- a/carrinho.html
+++ b/carrinho.html
@@ -10,26 +10,11 @@
   <body id="inicio">
     <header>
       <!--Logo-->
-      <a href="Quem somos.html">
+      <a href="index.html">
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--Links de acesso para outras páginas-->
-      <div class="links_acesso" style="right: 91%">
-        <a href="artistas.html">
-          <img
-            src="Imagens/artistaIcon.png"
-            alt="Botão de ir pro Usúario"
-            tabindex="1"
-            title="Nossos artistas"
-        /></a>
-        <a href="Quem somos.html">
-          <img
-            src="Imagens/Empresa.png"
-            alt="Botão de ir pro Usúario"
-            tabindex="1"
-            title="Quem somos"
-        /></a>
-      </div>
+      <div class="links_acesso">
       <div class="links_acesso">
         <a href="index.html">
           <img
@@ -37,22 +22,7 @@
             alt="Botão de ir pro Usúario"
             title="Página inicial"
         /></a>
-        <label for="submit_pecas">
-          <img
-            src="Imagens/carrinhoIcon.png"
-            alt=""
-            title="carrinho de compras"
-          />
-        </label>
-
-        <div id="botão_abrir_login">
-          <img
-            src="Imagens/userIcon.png"
-            alt="Botão de ir pro Usúario"
-            tabindex="1"
-            title="Usuário"
-          />
-        </div>
+      </div>
       </div>
       <!--Nav com filtros para as peças da página-->
       <nav tabindex="1" title="Clique para abrir/fechar">Filtrar coleções!</nav>
@@ -132,60 +102,61 @@
       </div>
     </header>
     <main>
-      <!--Página de login-->
-      <div id="caixa_login" style="display: none">
-        <h1 style="display: inline">Login</h1>
-        <label for="fechar_login">
-          <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
-        /></label>
-        <button id="fechar_login" style="display: none"></button>
-        <form id="formulario" method="get" action="areaUsuário.html">
-          <label for="nome_login"
-            ><img src="Imagens/inputNameIcon.png" alt="Nome"
-          /></label>
-          <input
-            type="text"
-            name="nome_login"
-            id="nome_login"
-            autocomplete="name"
-            required
-            placeholder="Digite seu nome"
-          />
-          <label for="senha_login">
-            <img src="Imagens/senhaIcon.png" alt="Senha"
-          /></label>
-          <input
-            type="password"
-            name="senha_login"
-            id="senha_login"
-            autocomplete="current-password"
-            required
-            minlength="8"
-            maxlength="15"
-            placeholder="Digite sua senha"
-          />
-          <div id="container_botoes">
-            <input
-              type="submit"
-              id="botão_entrar_conta"
-              value="Entrar"
-              style="background-color: rgb(19, 55, 219)"
-            />
-            <input
-              type="submit"
-              id="botão_criar_conta"
-              value="Criar conta"
-              style="background-color: rgb(161, 0, 175)"
-            />
-            <input
-              type="reset"
-              value="Resetar"
-              style="background-color: rgb(126, 0, 0)"
-            />
-          </div>
-        </form>
-      </div>
+      
     </main>
+    <!--Página de login-->
+    <div id="caixa_login" style="display: none">
+      <h1 style="display: inline">Login</h1>
+      <label for="fechar_login">
+        <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
+      /></label>
+      <button id="fechar_login" style="display: none"></button>
+      <form id="formulario" method="get" action="areaUsuário.html">
+        <label for="nome_login"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome"
+        /></label>
+        <input
+          type="text"
+          name="nome_login"
+          id="nome_login"
+          autocomplete="name"
+          required
+          placeholder="Digite seu nome"
+        />
+        <label for="senha_login">
+          <img src="Imagens/senhaIcon.png" alt="Senha"
+        /></label>
+        <input
+          type="password"
+          name="senha_login"
+          id="senha_login"
+          autocomplete="current-password"
+          required
+          minlength="8"
+          maxlength="15"
+          placeholder="Digite sua senha"
+        />
+        <div id="container_botoes">
+          <input
+            type="submit"
+            id="botão_entrar_conta"
+            value="Entrar"
+            style="background-color: rgb(19, 55, 219)"
+          />
+          <input
+            type="submit"
+            id="botão_criar_conta"
+            value="Criar conta"
+            style="background-color: rgb(161, 0, 175)"
+          />
+          <input
+            type="reset"
+            value="Resetar"
+            style="background-color: rgb(126, 0, 0)"
+          />
+        </div>
+      </form>
+    </div>
     <!--página de avaliação de atendimento-->
     <div id="avaliar_atendimento">
         <h1>Avalie o atendimento!</h1>
