--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <img
             src="Imagens/carrinhoIcon.png"
             alt=""
+            id="enviar_carrinho"
             title="carrinho de compras"
           />
           <p id="numeroitenscarrinho"> 0 </p>
@@ -154,7 +155,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">30R$</div>
+            <div class="preco_peca"> <input class="preco_individual_peca" type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Inverno</p>
           </div>
@@ -168,7 +169,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">35R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Inverno</p>
           </div>
@@ -182,7 +183,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">20R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Verão</p>
           </div>
@@ -196,7 +197,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">50R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Verão</p>
           </div>
@@ -210,7 +211,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">80R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de outono</p>
           </div>
@@ -224,7 +225,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">30R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de outono</p>
           </div>
@@ -238,7 +239,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">50R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de primavera</p>
           </div>
@@ -252,7 +253,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">70R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de primavera</p>
           </div>
@@ -266,7 +267,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">67R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção Afro</p>
           </div>
@@ -280,7 +281,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca">10R$</div>
+            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção Afro</p>
           </div>
