atualizando o form de usuário e diferenciando o botão de criar e entrar na conta

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -167,6 +167,10 @@
             style="background-color: rgb(126, 0, 0)"
           />
         </div>
+        <ul id="requerimentos_login">
+          <li>O nome deve estar preenchido</li>
+          <li>A senha precisa de no minímo 8 caractéres</li>
+        </ul>
       </form>
     </div>
     <!--Avaliação do atendimento pós suporte-->
