--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <!--peças na página inicial-->
       <h2 id="mensagem_selecao">Peças</h2>
       <form method="get" action="carrinho.html" id="pecas_home_container">
-        <input class="checkbox_pecas" type="checkbox" id="check1" />
+        <input class="checkbox_pecas" type="checkbox" id="check1" value="50" />
         <div class="peca_home colecao_inverno">
           <div class="exibicao_hover_pecas">
             <label for="check1">
@@ -155,54 +155,54 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input class="preco_individual_peca" type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input class="preco_individual_peca" type="text" disabled value="50R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Inverno</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check2" />
+        <input class="checkbox_pecas" type="checkbox" id="check2" value="94"/>
         <div class="peca_home colecao_inverno">
           <div class="exibicao_hover_pecas">
             <label for="check2">
               <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
             </label>
-            <p title="Tamanho">M</p>
+            <p title="Tamanho">P</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input type="text" disabled value="94R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Inverno</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check3" />
+        <input class="checkbox_pecas" type="checkbox" id="check3" value="120"/>
         <div class="peca_home colecao_verao">
           <div class="exibicao_hover_pecas">
             <label for="check3">
               <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
             </label>
-            <p title="Tamanho">M</p>
+            <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input type="text" disabled value="120R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Verão</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check4" />
+        <input class="checkbox_pecas" type="checkbox" id="check4" value="14"/>
         <div class="peca_home colecao_verao">
           <div class="exibicao_hover_pecas">
             <label for="check4">
               <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
             </label>
-            <p title="Tamanho">M</p>
+            <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input type="text" disabled value="14R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Verão</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check5" />
+        <input class="checkbox_pecas" type="checkbox" id="check5" value="32"/>
         <div class="peca_home colecao_outono">
           <div class="exibicao_hover_pecas">
             <label for="check5">
@@ -211,18 +211,18 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input type="text" disabled value="32R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de outono</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check6" />
+        <input class="checkbox_pecas" type="checkbox" id="check6" value="30"/>
         <div class="peca_home colecao_outono">
           <div class="exibicao_hover_pecas">
             <label for="check6">
               <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
             </label>
-            <p title="Tamanho">M</p>
+            <p title="Tamanho">GG</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
             <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
@@ -230,21 +230,21 @@
             <p>Coleção de outono</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check7" />
+        <input class="checkbox_pecas" type="checkbox" id="check7" value="25"/>
         <div class="peca_home colecao_primavera">
           <div class="exibicao_hover_pecas">
             <label for="check7">
               <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
             </label>
-            <p title="Tamanho">M</p>
+            <p title="Tamanho">P</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input type="text" disabled value="25R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de primavera</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check8" />
+        <input class="checkbox_pecas" type="checkbox" id="check8" value="1200"/>
         <div class="peca_home colecao_primavera">
           <div class="exibicao_hover_pecas">
             <label for="check8">
@@ -253,32 +253,32 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input type="text" disabled value="1200R$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de primavera</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check9" />
+        <input class="checkbox_pecas" type="checkbox" id="check9" value="44"/>
         <div class="peca_home colecao_afro">
           <div class="exibicao_hover_pecas">
             <label for="check9">
               <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
             </label>
-            <p title="Tamanho">M</p>
+            <p title="Tamanho">PP</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca"> <input type="text" disabled value="44$"> </div>
             <h1>Exibir coleções</h1>
             <p>Coleção Afro</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check10" />
+        <input class="checkbox_pecas" type="checkbox" id="check10"value="30" />
         <div class="peca_home colecao_afro">
           <div class="exibicao_hover_pecas">
             <label for="check10">
               <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
             </label>
-            <p title="Tamanho">M</p>
+            <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
             <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
@@ -329,7 +329,7 @@
             style="background-color: rgb(19, 55, 219)"
           />
           <input
-            type="submit"
+            type="button"
             id="botão_criar_conta"
             value="Criar conta"
             style="background-color: rgb(161, 0, 175)"
@@ -340,7 +340,11 @@
             style="background-color: rgb(126, 0, 0)"
           />
         </div>
-      </form>
+        <ul id="requerimentos_login">
+          <li>O nome deve estar preenchido</li>
+          <li>A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres</li>
+        </ul>
+      </form>  
     </div>
     <!--página de avaliação de atendimento-->
     <div id="avaliar_atendimento">
